# streampu

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
abbreviations/: index.html
assets/Tex_files/: invalid_bindings.tex  simple_sequence.tex  switch_case.tex  task_sockets.tex  test_do_while_loop.tex  test_for_loop.tex  test_generic_pipeline_fwd.tex  test_generic_pipeline_hybrid.tex  test_generic_pipeline_io.tex  test_nested_loops_pipeline.tex  test_pipeline_double_chain.tex  test_simple_pipeline.tex  valid_bindings_neg.tex
ci/: coverage-linux.sh  test-coverage-regression.sh  test-memcheck-regression.sh  test-sched.sh  tests_OTAC.sh
ci/windows/: build-windows-gcc.bat  build-windows-msvc.bat  ci-windows.yml
cmake/Modules/: FindHELGRIND.cmake  streampu-config-version.cmake.in
concepts_overview/: index.html
css/: extra.css
data/devel/: coverage.xml
data/develop/: coverage.xml
data/julia/: coverage.xml
data/master/: coverage.xml
docs/: 1_module_task.md  2_socket.md  3_sequence.md  4_pipeline.md  5_switcher.md  6_socket_fwd.md  7_pipeline_ctrl_flow.md  Control Flow.md  Forward socket.md  Pipeline & Adaptor.md  Pipeline.md  Sequence & Subsequence.md  Sequence.md  Socket.md  Switcher.md  Work in Progress.md  abbreviations.md  concepts_overview.md  index.md  module & task.md  module.md  overview.md  pipeline.md  pipeline_ctrl_flow.md  requirements.txt  sequence.md  socket.md  socket_fwd.md  switcher.md  task.md  tests_advanced.md  tests_bootstrap.md  thread_pinning.md  wip.md
docs/assets/: for.tex  sequence_to_pipeline.tex  simple_sequence.tex  switch.tex
docs/assets/Tex_files/: complex_pipeline_mix_fwd.tex  invalid_bindings.tex  invalid_bindings_neg.tex  invalide_bind.tex  pgflibraryaff3ct.code.tex  pipeline_double_chain.tex  pipeline_inter_stage_complex.tex  pipeline_inter_stage_double.tex  pipeline_inter_stage_fwd.tex  pipeline_interstage_fwd.tex  sequence_to_pipeline.tex  simple_pipeline_fwd.tex  simple_pipeline_hybrid.tex  simple_pipeline_hybrid_5_stages.tex  simple_pipeline_io.tex  simple_sequence.tex  switch.tex  switch_case.tex  task_example.tex  task_sockets.tex  test_complex_pipeline_full_fwd.tex  test_complex_pipeline_inter_stage.tex  test_complex_pipeline_mix_fwd.tex  test_do_while_loop.tex  test_exclusive_paths.tex  test_exclusive_paths_pipeline.tex  test_for_loop.tex  test_generic_pipeline_fwd.tex  test_generic_pipeline_hybrid.tex  test_generic_pipeline_hybrid_5_stages.tex  test_generic_pipeline_io.tex  test_nested_loops.tex  test_nested_loops_pipeline.tex  test_pipeline_double_chain.tex  test_simple_chain.tex  test_simple_chain_fwd.tex  test_simple_chain_hybrid.tex  test_simple_pipeline.tex  valid_binding.tex  valid_bindings.tex  (+2 more)
include/: aff3ct-core.hpp  aff3ct_core.hpp  streampu.hpp
include/Module/: Module.hpp  Module.hxx  Task.hpp
include/Module/Adaptor/: Adaptor.hpp  Adaptor.hxx  Adaptor_1_to_n.hpp  Adaptor_1_to_n.hxx  Adaptor_n_to_1.hpp  Adaptor_n_to_1.hxx
include/Module/Binaryop/: Binaryop.hpp  Binaryop.hxx
include/Module/Controller/: Controller.hpp  Controller.hxx
include/Module/Delayer/: Delayer.hpp  Delayer.hxx
include/Module/Finalizer/: Finalizer.hpp  Finalizer.hxx
include/Module/Incrementer/: Incrementer.hpp  Incrementer.hxx  Incrementer_fwd.hpp  Incrementer_fwd.hxx
include/Module/Incrementer_io/: Incrementer_io.hpp  Incrementer_io.hxx
include/Module/Initializer/: Initializer.hpp  Initializer.hxx
include/Module/Iterator/: Iterator.hpp  Iterator.hxx
include/Module/Probe/: Probe.hpp  Probe.hxx
include/Module/Reducer/: Reducer.hpp  Reducer.hxx
include/Module/Relayer/: Relayer.hpp  Relayer.hxx  Relayer_fwd.hpp  Relayer_fwd.hxx
include/Module/Relayer_io/: Relayer_io.hpp  Relayer_io.hxx
include/Module/Set/: Set.hpp  Set.hxx
include/Module/Sink/: Sink.hpp  Sink.hxx
include/Module/Sleeper/: Sleeper.hpp  Sleeper.hxx
include/Module/Source/: Source.hpp  (+1 more)
include/Scheduler/: Scheduler.hpp
include/Tools/: compute_bytes.h  init.h  signal_handler.h
lib/getopt-for-windows/: CMakeLists.txt
module/: index.html
pipeline/: index.html
pipeline_ctrl_flow/: index.html
scripts/: apply_clang_format.sh  generate_aff3ct_header.sh  generate_streampu_header.sh
search/: search_index.json
sequence/: index.html
signal_tracer/: main.cpp
socket/: index.html
socket_fwd/: index.html
src/Module/: Module.cpp  Task.cpp
src/Scheduler/: Scheduler.cpp
src/Tools/: compute_bytes.cpp  init.cpp  signal_handler.cpp  system_functions.cpp  system_functions.h
switcher/: index.html
task/: index.html
tests/: complex_pipeline_full_fwd.cpp  complex_pipeline_inter_stage.cpp  complexe_pipeline_full_fwd.cpp  complexe_pipeline_inter_stage.cpp  do_while_loop.cpp  exclusive_paths.cpp  for_loop.cpp  is_pin.cpp  nested_loops.cpp  pipeline_double_chain.cpp  simple_chain.cpp  simple_chain_fwd.cpp  simple_chain_hybrid.cpp  simple_chain_hybride.cpp  simple_chain_io.cpp  simple_generic_pipeline.cpp  simple_pipeline.cpp  simple_pipeline_full_io.cpp  simple_pipeline_io.cpp  simple_pipeline_multiple_stage_io.cpp  visual_pin.cpp
tests/advanced/: complex_pipeline_full_fwd.cpp  complex_pipeline_inter_stage.cpp  complex_pipeline_mix_fwd.cpp  generic_pipeline.cpp  pipeline_double_chain.cpp  pipeline_probe.cpp  simple_generic_pipeline.cpp  thread_pinning.cpp
tests/bootstrap/: do_while_loop.cpp  exclusive_paths.cpp  for_loop.cpp  nested_do_while_loops.cpp  nested_loops.cpp  simple_chain.cpp  simple_chain_fwd.cpp  simple_chain_hybrid.cpp  simple_pipeline.cpp
tests/builder/: pipeline_builder_conditional.cpp  pipeline_builder_simple.cpp
tests/ctrl_flow/: exclusive_paths_pipeline.cpp  nested_loops_pipeline.cpp
tests/ctrl_flw/: exclusive_paths_pipeline.cpp  nested_loops_pipeline.cpp
tests/julia/: hello_world.jl  increment.jl  myadd_call.jl  simple_chain_fwd_julia.cpp  simple_chain_julia.cpp
tests_advanced/: index.html
tests_bootstrap/: index.html
thread_pinning/: index.html
wip/: index.html
(+308 files in other folders)
